--- a/lakefile.toml
+++ b/lakefile.toml
@@ -1,5 +1,5 @@
 name = "REPL"
-defaultTargets = ["repl"]
+defaultTargets = ["repl", "corpus"]
 
 [[lean_lib]]
 name = "REPL"
@@ -7,4 +7,9 @@ name = "REPL"
 [[lean_exe]]
 name = "repl"
 root = "REPL.Main"
+supportInterpreter = true
+
+[[lean_exe]]
+name = "corpus"
+root = "Corpus"
 supportInterpreter = true
